--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyToDoList">
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".ui.AddTaskActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
